--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,227 +1,3 @@
-body {
-    background-color: #212121;
-}
-
-header nav {
-    background-color: #212121;
-}
-
-main .card-panel .body {
-    padding: 0;
-}
-
-/**
- * Created by sagarbendale on 11/25/15.
- */
-* {
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    background-color: white;
-}
-
-.row {
-    margin-bottom: 0;
-}
-
-div label select {
-    display: block;
-}
-
-header nav {
-    background-color: #2c3e50;
-    color: black;
-}
-
-header nav .brand-logo {
-    position: relative;
-    color: #ecf0f1;
-}
-
-header nav .brand-logo i {
-    font-size: 32px;
-    margin-top: 14px;
-    margin-left: 7px;
-}
-
-header nav .brand-logo h5 {
-    margin-top: 19px;
-}
-
-header nav ul.right li a {
-    color: #ecf0f1;
-}
-
-header nav ul.right li a i {
-    color: #ecf0f1;
-}
-
-header nav ul#slide-out {
-    background: #39576F;
-}
-
-header nav ul#slide-out li a {
-    color: #ecf0f1;
-}
-
-header nav ul#slide-out li a i {
-    color: #ecf0f1;
-}
-
-header nav a i {
-    color: #ecf0f1;
-}
-
-main {
-    padding: 5px 7px;
-    margin-bottom: 50px;
-}
-
-main .card-panel {
-    padding: 0;
-    width: 100%;
-}
-
-main .card-panel .heading {
-    text-align: center;
-    background-color: #39576F;
-    padding: 6px;
-    color: whitesmoke;
-    font-weight: 700;
-}
-
-main .card-panel .body {
-    padding: 0;
-}
-
-main .card-panel .body #cpu {
-    height: 29vmin;
-}
-
-main .card-panel .body #serverinfo {
-    background-color: #eceff1;
-}
-
-main .card-panel .body #serverinfo .input-field {
-    margin: 30px 0 10px 0;
-}
-
-main .card-panel .body #serverinfo .input-field span {
-    margin-left: 40px;
-}
-
-main .card-panel .body #serverinfo .input-field i {
-    top: -10px;
-}
-
-main .card-panel .body #netstat {
-    height: 300px;
-}
-
-main .card-panel .body #memory {
-    height: 29vmin;
-}
-
-main .card-panel .body #bubble {
-    height: 400px;
-}
-
-main .card-panel .body #traffic {
-    height: 400px;
-}
-
-main .card-panel .body #io {
-    height: 400px;
-}
-
-.info-wrapper {
-    margin: 120px 0;
-}
-
-.sub-text {
-    font-size: 20px;
-    color: #7f8c8d;
-}
-
-nav.menu {
-    background: #2c3e50;
-}
-
-h2 .material-icons {
-    position: relative;
-    top: 10px;
-}
-
-a.large-button {
-    background-color: #2980b9;
-    font-size: 2.0em;
-    padding: 20px;
-    height: auto;
-    width: 240px;
-    margin: 40px 0;
-    line-height: 0.8;
-}
-
-footer {
-    background-color: #212121;
-    color: whitesmoke;
-    padding: 15px;
-    text-align: center;
-}
-
-.tab-container {
-    margin: 12px;
-}
-
-.tab-container .btn {
-    border-radius: 35px;
-    background: #27ae60;
-}
-
-.tab-container .disabled {
-    cursor: pointer;
-}
-
-.tab-container .brand-logo {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-}
-
-.tab-container .brand-logo img {
-    max-height: 50px;
-}
-
-.tab-container .brand-logo h5 {
-    float: right;
-}
-
-.tab-container .tab-button-wrapper {
-    margin-top: 24px;
-}
-
-.google-visualization-table-table th, .google-visualization-table-table td {
-    padding: 5px;
-}
-
-@media only screen and (max-width: 850px) {
-    .gaugecontainer {
-        width: 50%;
-    }
-}
-
-
-code {
-    background: #2D2D2D;
-    color: #CB796E;
-    border: black dashed 1px;
-    padding: 6px
-}
+header nav a i,header nav ul#slide-out li a,header nav ul#slide-out li a i,header nav ul.right li a,header nav ul.right li a i{color:#ecf0f1}*{padding:0;margin:0}body{background-color:#fff}.row{margin-bottom:0}div label select{display:block}header nav{background-color:#2c3e50;color:#000}header nav .brand-logo{position:relative;color:#ecf0f1}header nav .brand-logo i{font-size:32px;margin-top:14px;margin-left:7px}header nav .brand-logo h5{margin-top:19px}header nav ul#slide-out{background:#39576F}main{padding:5px 7px;margin-bottom:50px}main .card-panel{padding:0;width:100%}main .card-panel .heading{text-align:center;background-color:#39576F;padding:6px;color:#f5f5f5;font-weight:700}main .card-panel .body{padding:0}main .card-panel .body #cpu{height:29vmin}main .card-panel .body #serverinfo{background-color:#eceff1}main .card-panel .body #serverinfo .input-field{margin:30px 0 10px}main .card-panel .body #serverinfo .input-field span{margin-left:40px}main .card-panel .body #serverinfo .input-field i{top:-10px}main .card-panel .body #netstat{height:300px}main .card-panel .body #memory{height:29vmin}main .card-panel .body #bubble,main .card-panel .body #io,main .card-panel .body #traffic{height:400px}.info-wrapper{margin:120px 0}.sub-text{font-size:20px;color:#7f8c8d}nav.menu{background:#2c3e50}h2 .material-icons{position:relative;top:10px}a.large-button{background-color:#2980b9;font-size:2em;padding:20px;height:auto;width:240px;margin:40px 0;line-height:.8}footer{background-color:#212121;color:#f5f5f5;padding:15px;text-align:center}.tab-container{margin:12px}.tab-container .btn{border-radius:35px;background:#27ae60}.tab-container .disabled{cursor:pointer}.tab-container .brand-logo{position:absolute;left:20px;top:20px}.tab-container .brand-logo img{max-height:50px}.tab-container .brand-logo h5{float:right}.tab-container .tab-button-wrapper{margin-top:24px}.google-visualization-table-table td,.google-visualization-table-table th{padding:5px}@media only screen and (max-width:850px){.gaugecontainer{width:50%}}code{background:#2D2D2D;color:#CB796E;border:1px dashed #000;padding:6px}
 
 ​
-
-
-/*# sourceMappingURL=base.css.map */
-
