--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -49,6 +49,8 @@ header {
     color: black;
 
     .brand-logo {
+      margin-top:15px;
+    
       position: relative;
       color: #ecf0f1;
       i {
