--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -4,6 +4,14 @@ body {
 
 }
 
+span.active {     color: #9e9e9e;
+    position: absolute;
+    top: -1rem;
+    left: 0.75rem;
+    font-size: 0.8rem;
+    cursor: text;}
+
+
 header {
   nav {
     background-color: #212121;
