--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -4,13 +4,6 @@ body {
 
 }
 
-span.active {     color: #9e9e9e;
-    position: absolute;
-    top: -1rem;
-    left: 0.75rem;
-    font-size: 0.8rem;
-    cursor: text;}
-
 
 header {
   nav {
@@ -132,6 +125,14 @@ main {
             margin-left: 40px;
 
           }
+        span.active {     color: #9e9e9e;
+            position: absolute;
+            top: -1rem;
+            left: 0.75rem;
+            font-size: 0.8rem;
+            cursor: text;
+        } 
+
           i {
             top: -10px;
           }
