--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -122,18 +122,17 @@ main {
         .input-field {
           margin: 30px 0 10px 0;
           span {
-            margin-left: 40px;
-
+                margin-left: 40px;
+                color: #9e9e9e;
+                position: absolute;
+                top: -1rem;
+                left: 0.75rem;
+                font-size: 0.8rem;
+                cursor: text;
           }
-        span.active {     color: #9e9e9e;
-            position: absolute;
-            top: -1rem;
-            left: 0.75rem;
-            font-size: 0.8rem;
-            cursor: text;
-        } 
+          
 
-          i {
+          i{
             top: -10px;
           }
         }
