--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -115,6 +115,9 @@ main {
       #cpu {
         height: 29vmin;
       }
+      #cpuSpline {
+        height: 400px;
+      }
 
       #serverinfo {
         background-color: #eceff1;
@@ -123,12 +126,14 @@ main {
           margin: 30px 0 10px 0;
           span {
                 margin-left: 40px;
+            .active {
                 color: #9e9e9e;
                 position: absolute;
                 top: -1rem;
                 left: 0.75rem;
                 font-size: 0.8rem;
                 cursor: text;
+            }
           }
           
 
